sat billeder ind på splash

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
+
 <html lang="">
 
 <head>
@@ -13,16 +13,20 @@
 	<script src=""></script>
 </body>
 
-=======
 <html lang="da">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalklandet</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kalklandet</title>
 </head>
 
 <body>
-
+	<div class="container">
+		<div class="koldkrig"><img src="billeder/koldkrig_splash.jpg" alt="Billede af Koldkrigsmuseum Stenvsfort"></div>
+		<div class="faxe"><img src="billeder/geo_splash.jpg" alt="Billede fra Geomuseum Faxe"></div>
+		<div class="klint"><img src="billeder/klint_splash.JPG" alt="Billede af Stevns Klint"></div>
+	</div>
 </body>
->>>>>>> origin/master
+
 </html>
