--- a/index.html
+++ b/index.html
@@ -1,19 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-
-<body>
-	<script src=""></script>
-</body>
-
-=======
 <html lang="da">
 <head>
     <meta charset="utf-8">
@@ -24,5 +9,28 @@
 <body>
 
 </body>
->>>>>>> origin/master
+<footer>
+    <div id="footermenu">
+        <div class="centering">
+        <nav>
+            <ul class="nav1">
+
+
+
+
+
+            </ul>
+
+        </nav>
+
+
+        </div>
+
+
+
+
+
+
+    </div>
+</footer>
 </html>
