--- a/musforside.html
+++ b/musforside.html
@@ -11,14 +11,41 @@
         .container {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-gap: 5px;
-            max-width: 960px;
+            grid-gap: 1vw;
+            max-width: 760vw;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
         }
 
         .item {
-            border: 1px solid #000;
-            height: 100px;
+            border: 1vw solid #000;
+            height: 50vw;
+            flex-grow: 1;
+            flex-basis:
+        }
+
+        .item-header {
+            width: 95vw;
+        }
+
+        .item-tekst {
+            width: 95vw;
+            height: 220vw;
+        }
+
+        .item-foto {
+            width: 75vw;
+        }
+
+        .item-aabning {
+            width: 75vw;
+            height: 45vw;
+        }
+
+        .item-footer {
+            width: 95vw;
+            height: 50vw;
         }
     </style>
 </head>
@@ -26,10 +53,10 @@
 <body>
     <div class="container">
         <div class="item item-header">header</div>
-        <div class="item item-over">overskrift</div>
-        <div class="item item-tekst">tekst</div>
-        <div class="item item-foto">foto</div>
-        <div class="item item-aabning">aabningstider</div>
+        <div class="item item-tekst">tekst
+            <div class="item item-foto">foto</div>
+            <div class="item item-aabning">aabningstider</div>
+        </div>
         <div class="item item-footer">footer</div>
     </div>
 
