--- a/musforside.html
+++ b/musforside.html
@@ -8,55 +8,71 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <style>
+        * {
+            margin: 0;
+        }
+
+        body {
+            box-sizing: border-box;
+        }
+
         .container {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 1vw;
+            grid-template-columns: (3, 1fr);
+            grid-gap: 0vw;
             max-width: 760vw;
             margin: 0 auto;
-            display: flex;
-            flex-direction: column;
+            grid-template-areas:
+                'header header header header header'
+                'menu menu menu menu menu'
+                'main main main main main'
+                'aabning aabning aabning aabning aabning'
+                'footer footer footer footer footer'
         }
 
         .item {
             border: 1vw solid #000;
             height: 50vw;
-            flex-grow: 1;
-            flex-basis:
+
         }
 
         .item-header {
-            width: 95vw;
+            height: 70vw;
+            grid-area: header;
         }
 
-        .item-tekst {
-            width: 95vw;
-            height: 220vw;
+
+        .item-main {
+            height: 320vw;
+            grid-area: main;
         }
 
-        .item-foto {
-            width: 75vw;
+        .item-undermenu {
+            height: 15vw;
+            grid-area: menu;
+            margin-top: 40vw;
         }
 
         .item-aabning {
-            width: 75vw;
             height: 45vw;
+            grid-area: aabning;
         }
 
         .item-footer {
-            width: 95vw;
             height: 50vw;
+            grid-area: footer;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="item item-header">header</div>
-        <div class="item item-tekst">tekst
-            <div class="item item-foto">foto</div>
-            <div class="item item-aabning">aabningstider</div>
+        <div class="item item-header">header
+            <div class="item item-undermenu"></div>
         </div>
+        <div class="item item-main">baggrund
+        </div>
+        <div class="item item-aabning">aabningstider</div>
         <div class="item item-footer">footer</div>
     </div>
 
