--- a/musforside.html
+++ b/musforside.html
@@ -49,8 +49,8 @@
 
         .item-undermenu {
             height: 15vw;
-            grid-area: menu;
-            margin-top: 40vw;
+            grid-area: header;
+            margin-top: 45vw;
         }
 
         .item-aabning {
@@ -68,10 +68,9 @@
 <body>
     <div class="container">
         <div class="item item-header">header
-            <div class="item item-undermenu"></div>
         </div>
-        <div class="item item-main">baggrund
-        </div>
+        <div class="item item-undermenu"></div>
+        <div class="item item-main">baggrund</div>
         <div class="item item-aabning">aabningstider</div>
         <div class="item item-footer">footer</div>
     </div>
