header og footer på kkmuseumsiden

--- a/kkrigmuseum.html
+++ b/kkrigmuseum.html
@@ -8,11 +8,60 @@
 
 <body>
    <header>
+<div class="header">
 
+    <div id="logo">
+    </div>
+
+    <ul class="menu">
+
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+
+    </ul>
+
+
+
+    <div id="english">
+    </div>
+
+    <div id="deutch">
+    </div>
+
+    <div id="dansk">
+    </div>
+
+
+
+</div>
    </header>
 
 
-   <footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <footer>
            <div id="footermenu">
 
 
