--- a/besogos.html
+++ b/besogos.html
@@ -18,6 +18,11 @@
             border: solid 2px black;
         }
 
+        .billede_nyheder img {
+            max-width: 50%
+        }
+
+
         .grid-item-footer {
             grid-area: footer;
         }
@@ -27,12 +32,26 @@
             grid-template-areas: 'header header header '
                 'main main main'
                 'footer footer footer';
-            grid-gap: 10px;
+            grid-gap: 20px;
         }
 
         .grid-container>div {
-            background-color: lightgrey;
             text-align: center;
+
+        }
+
+        .text_nyheder {
+            text-align: left;
+            padding: 2vw;
+            margin: 2vw;
+        }
+
+        p {
+            font-family: arial;
+        }
+
+        h3 {
+            font-family: arial;
 
         }
     </style>
@@ -41,11 +60,31 @@
 <body>
     <div class="grid-container">
         <div class="grid-item-header">header</div>
-        <div class="grid-item-main">main
-            <div class="nyheder">
+        <div class="grid-item-main">Main
+
+            <div class="nyheder_1">
+                <h3> Nyheder 1 </h3>
+                <div class="billede_nyheder">
+                    <img src="billeder/Placeholder.png">
+                </div>
+                <div class="text_nyheder">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+            </div>
+
+            <div class="nyheder_2">
+                <h3> Nyheder 2</h3>
+                <div class="billede_nyheder">
+                    <img src="billeder/Placeholder.png">
+                </div>
+                <div class="text_nyheder">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+
 
 
             </div>
+
 
 
         </div>
