--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <body>
 	<div class="container">
-		<div class="koldkrig"><img src="billeder/koldkrig_splash.jpg" alt="Billede af Koldkrigsmuseum Stenvsfort"></div>
+		<div class="koldkrig"><img src="billeder/koldkrig_splash.jpg" alt="Billede af Koldkrigsmuseum Stenvsfort">
+			<img src="billeder/koldkrig_ikon.png" alt="Ikon til Koldkrigsmuseum Stenvsfort"></div>
 		<div class="faxe"><img src="billeder/geo_splash.jpg" alt="Billede fra Geomuseum Faxe"></div>
 		<div class="klint"><img src="billeder/klint_splash.JPG" alt="Billede af Stevns Klint"></div>
 	</div>
