--- a/kkrigmuseum.html
+++ b/kkrigmuseum.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,39 +8,37 @@
 </head>
 
 <body>
-   <header>
-<div class="header">
+    <header>
+        <div class="header">
 
-    <div id="logo">
-    </div>
+            <div id="logo">
+            </div>
 
-    <ul class="menu">
+            <ul class="menu">
 
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+                <li><a href="">Koldkrigsmuseet Stevnsfort</a></li>
+                <li><a href="">Geomuseum Faxe</a></li>
+                <li><a href="">Stevns Klint</a></li>
+                <li><a href="">Om Kalklandet</a></li>
+                <li><a href="">Det Sker</a></li>
 
-    </ul>
-
-
-
-    <div id="english">
-    </div>
-
-    <div id="deutch">
-    </div>
-
-    <div id="dansk">
-    </div>
+            </ul>
 
 
 
-</div>
-   </header>
+            <div id="english">
+            </div>
+
+            <div id="deutch">
+            </div>
+
+            <div id="dansk">
+            </div>
 
 
+
+        </div>
+    </header>
 
 
 
@@ -50,6 +49,40 @@
 
 
 
+    <footer>
+        <div id="footermenu">
+
+
+            <div class="row1">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div class="row2">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div class="row3">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
 
 
 
@@ -57,56 +90,12 @@
 
 
 
+        </div>
 
 
 
-
-          <footer>
-           <div id="footermenu">
-
-
-      <div class="row1">
-          <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-          </ul>
-      </div>
-
-      <div class="row2">
-          <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-          </ul>
-      </div>
-
-      <div class="row3">
-          <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-          </ul>
-      </div>
-
-
-
-
-
-
-
-    </div>
-
-
-
-   </footer>
+    </footer>
 
 </body>
+
 </html>
