--- a/musforside.html
+++ b/musforside.html
@@ -134,18 +134,134 @@
         }
 
         }
-
     </style>
 </head>
 
+
 <body>
     <div class="container">
-        <div class="item item-headerweb">web-header</div>
-        <div class="item item-headermobil">mobil-header</div>
-        <div class="item item-undermenu"></div>
-        <div class="item item-main">baggrund</div>
-        <div class="item item-aabning">aabningstider</div>
-        <div class="item item-footer">footer</div>
+        <div class="item item-headerweb">web-header
+            <header>
+                <div class="head">
+
+                    <div id="logo">
+                    </div>
+
+                    <ul class="menu">
+
+                        <li><a href="">Koldkrigsmuseet Stevnsfort</a></li>
+                        <li><a href="">Geomuseum Faxe</a></li>
+                        <li><a href="">Stevns Klint</a></li>
+                        <li><a href="">Om Kalklandet</a></li>
+                        <li><a href="">Det Sker</a></li>
+
+                    </ul>
+
+                    <div id="english">
+                    </div>
+
+                    <div id="deutch">
+                    </div>
+
+                    <div id="dansk">
+                    </div>
+
+                </div>
+            </header>
+        </div>
+        <div class="item item-headermobil">mobil-header
+            <header>
+                <div class="head">
+
+                    <div id="logo">
+                    </div>
+                    <div id="menu">
+                        <ul class="headermenu">
+                            <li><a href="">Koldkrigsmuseet Stevnsfort</a></li>
+                            <li><a href="">Geomuseum Faxe</a></li>
+                            <li><a href="">Stevns Klint</a></li>
+                            <li><a href="">Om Kalklandet</a></li>
+                            <li><a href="">Det Sker</a></li>
+
+                        </ul>
+                    </div>
+                    <div id="english">
+                    </div>
+
+                    <div id="deutch">
+                    </div>
+
+                    <div id="dansk">
+                    </div>
+
+                </div>
+            </header>
+
+        </div>
+        <div class="item-undermenu">Undermenu
+            <div id="menu">
+
+                <ul class="undermenu">
+
+                    <li><a href="">Om Os</a></li>
+                    <li><a href="">Det Sker</a></li>
+                    <li><a href="">Guidede Ture</a></li>
+                    <li><a href="">Undervisning</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="item-main">baggrund
+
+            <div class="overskrift"></div>
+            <div class="billede"></div>
+            <div class="tekst"></div>
+        </div>
+        <div class="item-aabning">aabningstider
+            <div class="tideroverskrift"></div>
+            <div class="tider"></div>
+        </div>
+        <div class="item-footer">footer
+            <footer>
+                <div id="menu">
+
+                    <div class="row1">
+                        <ul>
+                            <li><a href="">Bestyrelse</a></li>
+                            <li><a href="">Medarbejdere</a></li>
+                            <li><a href="">Frivillige</a></li>
+                            <li><a href="">Østsjællands museumsforening</a></li>
+                            <li><a href="">Ledige Stillinger</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="row2">
+                        <ul>
+                            <li><a href="">Mission og vision</a></li>
+                            <li><a href="">Planarbejde</a></li>
+                            <li><a href="">Indsamling</a></li>
+                            <li><a href="">Formidling</a></li>
+                            <li><a href="">Samarbejde</a></li>
+                            <li><a href="">Stevns Klint som verdensarv</a></li>
+                        </ul>
+
+
+                        <div class="row3">
+                            <ul>
+                                <li><a href="">Fondstøtte og sponsorer</a></li>
+                                <li><a href="">Priser og anderkendelse</a></li>
+                                <li><a href="">Publikationer</a></li>
+                                <li><a href="">Årsberetninger</a></li>
+                                <li><a href="">Årsregnskab</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </footer>
+
+
+        </div>
     </div>
 
 </body>
