--- a/musforside.html
+++ b/musforside.html
@@ -2,151 +2,154 @@
 <html lang="dk">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Museum</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
-    <style>
-        * {
-            margin: 0;
-        }
+	<style>
+		* {
+			margin: 0;
+		}
 
-        body {
-            box-sizing: border-box;
-        }
-
-
-        .container {
-            display: grid;
-            grid-template-columns: (3, 1fr);
-            grid-gap: 0vw;
-            max-width: 760vw;
-            margin: 0 auto;
-            grid-template-areas:
-                'header header header header header'
-                'menu menu menu menu menu'
-                'main main main main main'
-                'aabning aabning aabning aabning aabning'
-                'footer footer footer footer footer'
-        }
-
-        .item-headermobil {
-            height: 70vw;
-            grid-area: header;
-            background-image: url(billeder/geo_splash.jpg);
-        }
-
-        .item-headerweb {
-            height: 10vw;
-            grid-area: webheader;
-            display: none;
-        }
-
-        .item-undermenu {
-            height: 15vw;
-            grid-area: header;
-            margin-top: 45vw;
-            background-color: white;
-        }
-
-        .item-main {
-            height: 120vw;
-            grid-area: main;
-            background-color: white;
-        }
-
-        .item-aabning {
-            height: 45vw;
-            grid-area: aabning;
-            background-color: lightgray;
-        }
-
-        .item-footer {
-            height: 50vw;
-            grid-area: footer;
-            background-color: #4a3f3c;
-        }
-
-        @media screen and (min-width: 600px) {
-            .item-headermobil {
-                display: none;
-            }
-
-            .item-headerweb {
-                display: inherit;
-                height: 20vw;
-            }
-
-            .container {
-                background-image: url(billeder/geo_splash.jpg);
-                grid-template-areas:
-                    'webheader webheader webheader webheader webheader'
-                    'header main main main main'
-                    'aabning main main main main'
-                    'footer footer footer footer footer'
-            }
-
-            .item-main {
-                margin: 2vw;
-                height: 100vw;
-                margin-bottom: 10vw;
-            }
-
-            .item-undermenu {
-                margin-left: 4vw;
-                margin: 2vw;
-                height: 45vw;
-            }
+		body {
+			box-sizing: border-box;
+		}
 
 
-            .item-aabning {
-                margin: 2vw;
-                height: 30vw;
-                background-color: white;
-            }
+		.container {
+			display: grid;
+			grid-template-columns: (3, 1fr);
+			grid-gap: 0vw;
+			max-width: 760vw;
+			margin: 0 auto;
+			grid-template-areas:
+				'header header header header header'
+				'menu menu menu menu menu'
+				'main main main main main'
+				'aabning aabning aabning aabning aabning'
+				'footer footer footer footer footer'
+		}
 
-            .item-footer {
-                background-color: #4a3f3c;
-                height: 20vw;
-            }
-        }
+		.item-headermobil {
+			height: 70vw;
+			grid-area: header;
+			background-image: url(billeder/geo_splash.jpg);
 
-        @media screen and (min-width: 900px) {
+		}
 
-            .container {
-                background-image: url(billeder/geo_splash.jpg);
-                grid-template-areas:
-                    'webheader webheader webheader webheader webheader'
-                    'header main main main aabning'
-                    'footer footer footer footer footer'
-            }
+		.item-headerweb {
+			height: 10vw;
+			grid-area: webheader;
+			display: none;
+		}
 
-            .item-headerweb {
-                height: 10vw;
+		.item-undermenu {
+			height: 15vw;
+			grid-area: header;
+			margin-top: 45vw;
+			background-color: white;
+		}
 
-            }
+		.item-main {
+			height: 120vw;
+			grid-area: main;
+			background-color: white;
+		}
 
-            .item-undermenu {
-                height: 27vw;
-            }
+		.item-aabning {
+			height: 45vw;
+			grid-area: aabning;
+			background-color: lightgray;
+		}
 
-        }
+		.item-footer {
+			height: 50vw;
+			grid-area: footer;
+			background-color: #4a3f3c;
+		}
 
-        }
+		@media screen and (min-width: 600px) {
+			.item-headermobil {
+				display: none;
+			}
 
-    </style>
+			.item-headerweb {
+				display: inherit;
+				height: 20vw;
+			}
+
+			.container {
+				background-image: url(billeder/geo_splash.jpg);
+				background-size: 100%;
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				grid-template-areas:
+					'webheader webheader webheader webheader webheader'
+					'header main main main main'
+					'aabning main main main main'
+					'footer footer footer footer footer'
+			}
+
+			.item-main {
+				margin: 2vw;
+				height: 100vw;
+				margin-bottom: 10vw;
+			}
+
+			.item-undermenu {
+				margin-left: 4vw;
+				margin: 2vw;
+				height: 45vw;
+			}
+
+
+			.item-aabning {
+				margin: 2vw;
+				height: 30vw;
+				background-color: white;
+			}
+
+			.item-footer {
+				background-color: #4a3f3c;
+				height: 20vw;
+			}
+		}
+
+		@media screen and (min-width: 900px) {
+
+			.container {
+				background-image: url(billeder/geo_splash.jpg);
+				grid-template-areas:
+					'webheader webheader webheader webheader webheader'
+					'header main main main aabning'
+					'footer footer footer footer footer'
+			}
+
+			.item-headerweb {
+				height: 10vw;
+
+			}
+
+			.item-undermenu {
+				height: 27vw;
+			}
+
+		}
+
+		}
+	</style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="item item-headerweb">web-header</div>
-        <div class="item item-headermobil">mobil-header</div>
-        <div class="item item-undermenu"></div>
-        <div class="item item-main">baggrund</div>
-        <div class="item item-aabning">aabningstider</div>
-        <div class="item item-footer">footer</div>
-    </div>
+	<div class="container">
+		<div class="item item-headerweb">web-header</div>
+		<div class="item item-headermobil">mobil-header</div>
+		<div class="item item-undermenu"></div>
+		<div class="item item-main">baggrund</div>
+		<div class="item item-aabning">aabningstider</div>
+		<div class="item item-footer">footer</div>
+	</div>
 
 </body>
 
