--- a/musforside.html
+++ b/musforside.html
@@ -227,45 +227,49 @@
             <div class="tideroverskrift"></div>
             <div class="tider"></div>
         </div>
-        <div class="item-footer">footer
-            <footer>
-                <div id="menu">
+        <div class="item-footer">
 
-                    <div class="row1">
-                        <ul>
-                            <li><a href="">Bestyrelse</a></li>
-                            <li><a href="">Medarbejdere</a></li>
-                            <li><a href="">Frivillige</a></li>
-                            <li><a href="">Østsjællands museumsforening</a></li>
-                            <li><a href="">Ledige Stillinger</a></li>
-                        </ul>
-                    </div>
+            <div class="row1">
+                <ul>
+                    <li>
+                        <h2>Organisation</h2>
+                    </li>
+                    <li><a href="">Bestyrelse</a></li>
+                    <li><a href="">Medarbejdere</a></li>
+                    <li><a href="">Frivillige</a></li>
+                    <li><a href="">Østsjællands museumsforening</a></li>
+                    <li><a href="">Ledige Stillinger</a></li>
+                </ul>
+            </div>
 
-                    <div class="row2">
-                        <ul>
-                            <li><a href="">Mission og vision</a></li>
-                            <li><a href="">Planarbejde</a></li>
-                            <li><a href="">Indsamling</a></li>
-                            <li><a href="">Formidling</a></li>
-                            <li><a href="">Samarbejde</a></li>
-                            <li><a href="">Stevns Klint som verdensarv</a></li>
-                        </ul>
+            <div class="row2">
+                <ul>
+                    <li>
+                        <h2>Vores Opgaver</h2>
+                    </li>
+                    <li><a href="">Mission og vision</a></li>
+                    <li><a href="">Planarbejde</a></li>
+                    <li><a href="">Indsamling</a></li>
+                    <li><a href="">Formidling</a></li>
+                    <li><a href="">Samarbejde</a></li>
+                    <li><a href="">Stevns Klint som verdensarv</a></li>
+                </ul>
+            </div>
 
+            <div class="row3">
 
-                        <div class="row3">
-                            <ul>
-                                <li><a href="">Fondstøtte og sponsorer</a></li>
-                                <li><a href="">Priser og anderkendelse</a></li>
-                                <li><a href="">Publikationer</a></li>
-                                <li><a href="">Årsberetninger</a></li>
-                                <li><a href="">Årsregnskab</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <ul>
+                    <li>
+                        <h2>Vores Resultater</h2>
+                    </li>
+                    <li><a href="">Fondstøtte og sponsorer</a></li>
+                    <li><a href="">Priser og anderkendelse</a></li>
+                    <li><a href="">Publikationer</a></li>
+                    <li><a href="">Årsberetninger</a></li>
+                    <li><a href="">Årsregnskab</a></li>
 
-            </footer>
-
+                </ul>
+            </div>
 
         </div>
     </div>
